# chip8

./: .gitignore  CMakeLists.txt  CMakePresets.json
CMake/: FindSFML.cmake
include/: chip8_2.h  cpu.hpp  game.hpp
src/: chip8_2.cpp  cpu.cpp  game.cpp
